--- a/Atividade/atividade.css
+++ b/Atividade/atividade.css
@@ -49,7 +49,6 @@ div.form{
         border: solid 2px #000;
         font-family: Arial;
         padding: 5px;
-        gap: 20px;
         
         .title {
             font-size: 40px;
@@ -59,16 +58,20 @@ div.form{
         .text-input {
             font-size: 20px;
 
-            input{
+            input, select{
                 width: 390px;
                 border-radius: 5px;
                 height: 30px;
                 font-size: 20px;
             }
+
         }
 
         .tabela-consulta {
-            width: 100%;
+            width: 99%;
+            height: 230px;
+            overflow-y: auto;
+            border: 1px solid black;
 
             table {
                 width: 100%;
