--- a/Atividade/atividade.css
+++ b/Atividade/atividade.css
@@ -69,7 +69,7 @@ div.form{
 
         .tabela-consulta {
             width: 99%;
-            height: 230px;
+            height: auto;
             overflow-y: auto;
             border: 1px solid black;
 
